# DYCompilers

./: .gitignore  .gitmodules  README.md
.github/: copilot-instructions.md
01-foundations/: README.md
01-foundations/exercises/: README.md  ll1-practice.md  regex-to-dfa.md
01-foundations/notes/: 01-compiler-basics.md  02-lexical-analysis.md  03-1-syntax-analysis.md  03-2-syntax-analysis.md  03-syntax-analysis.md  04-semantic-analysis.md  05-intermediate-code-generation.md  06-runtime-environments.md  07-optimization-techniques.md  08-advanced-compiler-topics.md  09-domain-specific-languages.md  README.md  automata.md  basics.md
01-foundations/notes/templates/: daily-reflection-template.md  topic-note-template.md
01-foundations/projects/lexer-playground/: README.md
02-basic-compilers/: README.md
02-basic-compilers/projects/mlir-toy-compiler/: README.md
02-basic-compilers/projects/mlir-toy-compiler/src/toy-reference/Ch1/: CMakeLists.txt
02-basic-compilers/projects/tiny-arithmetic-compiler/: README.md
03-intermediate-compilers/: README.md
03-intermediate-compilers/projects/minerva-lang/: README.md
04-advanced-compilers/: README.md
04-advanced-compilers/projects/optimizing-ssa-compiler/: README.md
05-ml-compilers/: README.md
06-tinygraph-compiler/: CMakeLists.txt  README.md  examples.py  setup.py
06-tinygraph-compiler/src/: placeholder.cpp
06-tinygraph-compiler/tests/: test_add.py
06-tinygraph-compiler/tinygraph/: __init__.py  api.py  cli.py
06-tinygraph-compiler/tinygraph/exec/: eager.py  graph.py
LLVM/: cpp-refresher.md
LLVM/TracePass/: CMakeLists.txt  README.md  TracePass.cpp
LLVM/TracePass/tests/: test.c
docs/: LEARNING_PATH.md  RESOURCES.md  ROADMAP.md  compiler-stack-overview.md  glossary.md  llvm-setup.md  llvm-two-day-plan.md
docs/week-plans/: week1-plan.md  week1-retro.md
shared/: README.md
shared/tools/: README.md  build.ps1  build.sh  test.ps1  test.sh  tooling-checklist.md
(+31 files in other folders)
